--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
         "admin-lte": "^3.0.0-beta.2",
+        "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.24.0",
         "sweetalert2": "^8.18.0",
         "vform": "^1.0.1",
