--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "sweetalert2": "^8.18.0",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.1.3"
+        "vue-router": "^3.1.3",
+        "vuex": "^3.1.1"
     }
 }
